@@ -2,6 +2,7 @@ elos (0.57.3-6) unstable; urgency=medium
 
   * Edit default daemon configuration.
   * Add jq and moreutils to the build dependencies.
+  * Modify build targets.
 
  -- Isaac True <isaac.true@emlix.com>  Tue, 07 May 2024 17:03:06 +0200
 
